[gd_scene load_steps=5 format=3 uid="uid://dwut7kg1wiryc"]

[ext_resource type="Script" uid="uid://df07lu1q5mauk" path="res://Scripts/menu.gd" id="1_1rerr"]
[ext_resource type="Texture2D" uid="uid://dvggg1au0hnor" path="res://background.jpg" id="2_cayip"]
[ext_resource type="PackedScene" uid="uid://dir2ousrcwnry" path="res://Scenes/Popups/settings.tscn" id="2_xhh6f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cayip"]
texture = ExtResource("2_cayip")

[node name="Menu" type="Node2D"]
script = ExtResource("1_1rerr")

[node name="Panel" type="Panel" parent="."]
offset_left = 837.0
offset_top = -1435.0
offset_right = 2758.0
offset_bottom = -355.0
theme_override_styles/panel = SubResource("StyleBoxTexture_cayip")

[node name="Label" type="Label" parent="Panel"]
offset_left = 1382.0
offset_top = 172.0
offset_right = 1659.0
offset_bottom = 309.0
theme_override_font_sizes/font_size = 100
text = "Menu"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1799, -895)

[node name="Buttons" type="Node" parent="."]

[node name="Play Button" type="Button" parent="Buttons"]
offset_left = 949.0
offset_top = -939.0
offset_right = 1058.0
offset_bottom = -862.0
theme_override_font_sizes/font_size = 50
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="Settings Button" type="Button" parent="Buttons"]
offset_left = 949.0
offset_top = -810.0
offset_right = 1150.0
offset_bottom = -733.0
theme_override_font_sizes/font_size = 50
text = "Settings"
metadata/_edit_use_anchors_ = true

[node name="Exit Button" type="Button" parent="Buttons"]
offset_left = 949.0
offset_top = -688.0
offset_right = 1046.0
offset_bottom = -611.0
theme_override_font_sizes/font_size = 50
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="Settings" parent="." instance=ExtResource("2_xhh6f")]

[connection signal="pressed" from="Buttons/Play Button" to="." method="playButtonPressed"]
[connection signal="pressed" from="Buttons/Settings Button" to="." method="settingsButtonPressed"]
[connection signal="pressed" from="Buttons/Exit Button" to="." method="exitButtonPressed"]
